text align fixed in pricing

--- a/style.css
+++ b/style.css
@@ -584,6 +584,7 @@ footer .container ul li {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 }
 
